--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@ Android Studio / IntelliJ
 ===============================================
 User-specific IDE settings and caches.
 *.iml
-.idea
-.app/google-services.json
+.idea/
 
 ===============================================
 Gradle
@@ -17,39 +16,28 @@ local.properties
 Build Output
 ===============================================
 All compiled code, resources, and APKs/Bundles.
-build/
+/build
+
+===============================================
+SECRETS & CONFIGURATION - DO NOT COMMIT
+===============================================
+Firebase configuration file. Contains sensitive API keys.
+/app/google-services.json
+
+App signing keys. If these leak, anyone can sign and release
+malicious updates to your app.
+*.jks
+*.keystore
 
 ===============================================
 Development Files & Tools
 ===============================================
 Emulator captures, logs, and native build artifacts.
-captures/
+/captures/
 *.log
 .externalNativeBuild/
 .cxx/
 
 ===============================================
-Security - CRITICAL
-===============================================
-Never commit your app signing keys!
-*.jks
-*.keystore
-
-===============================================
 System Files
 ===============================================
-macOS specific files.
-.DS_Store
-
-
-### **What to Do After Making the Changes**
-
-If you have already committed files to Git that *should* have been ignored (like `.iml` files), Git might keep tracking them. To fix this, run these two commands from your project's root directory in the terminal:
-
-1.  **Remove all tracked files from the staging area:**
-    ```bash
-    git rm -r --cached .
-    ```
-2.  **Re-add all files, respecting the new `.gitignore`:**
-    ```bash
-    git add .
